# lhc

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/: README.md  __init__.py  generate.py  merge.py  prepare.py  prepare_mlx.py
data/seeds/: v0.1.5.jsonl  v0.1.jsonl
data/synthetic/v0.1/: v0.1_eval.jsonl
docs/: architecture.md  benchmark-spec.md  changelog.md  eval-suite.md  findings.md  manifesto.md  results.md
docs/journal/: 2026-05-08-external-review-and-decontamination.md  2026-05-09-v02-sweep-verdict-ember-v015-stops-here.md  2026-05-10-mlx-replication-and-diagnostic-closure.md  2026-05-10b-repo-rebrand-to-personal-namespace.md  2026-05-10c-lhc-v02-published-to-huggingface.md  2026-05-10d-deterministic-baseline-shipped-and-overclaim-corrected.md  2026-05-10e-path-e-shipped-writeup-and-cycle-closed.md  2026-05-12-v03-framing-and-reviewer-lock.md  README.md
docs/v0.3/: DECISION-v0.3.md  draft-dataset-card.md  draft-model-card.md
evals/: README.md  __init__.py
evals/results/published/: README.md
evals/results/published/8b-class-leaderboard/: openrouter-command-r7b-1.json  openrouter-command-r7b-2.json  openrouter-command-r7b-3.json  openrouter-llama-3.1-8b-1.json  openrouter-llama-3.1-8b-2.json  openrouter-llama-3.1-8b-3.json  openrouter-ministral-8b-1.json  openrouter-ministral-8b-2.json  openrouter-ministral-8b-3.json  openrouter-phi-4-mini-1.json  openrouter-phi-4-mini-2.json  openrouter-phi-4-mini-3.json  openrouter-qwen2.5-7b-1.json  openrouter-qwen2.5-7b-2.json  openrouter-qwen2.5-7b-3.json  openrouter-qwen3-8b-or-1.json  openrouter-qwen3-8b-or-2.json  openrouter-qwen3-8b-or-3.json
evals/results/published/lhc-v0.2/: README.md  audit-combined.json  audit-g12.json  audit-g9.json  deterministic-baseline.json  verdict-final.json  verdict-matched-inference.json  verdict-original-confounded.json
evals/runners/: __init__.py  client.py  fewshot.py  gap.py  grader.py  lhc.py  trace.py
evals/tasks/commitment/: commitment_001.yaml  commitment_002.yaml  commitment_003.yaml  commitment_004.yaml
evals/tasks/resumption/: resumption_001.yaml  resumption_002.yaml  resumption_003.yaml  resumption_004.yaml
evals/tasks/state_recall/: state_recall_001.yaml  state_recall_002.yaml  state_recall_003.yaml  state_recall_004.yaml
evals/v0.2/: AUTHORING.md  DECISION.md  analyze.py  audit_g12_manual.py  audit_g9_judge_stability.py  banned_overlap.json  build_banned_overlap.py  build_parquet.py  deterministic_baseline.py  diagnostic_compare.py  diagnostic_ember_replicate.py  diagnostic_ember_rerun.py  diagnostic_local_qwen.py  diagnostic_qwen_replicate.py  manifest.json
inference/: README.md  __init__.py  serve.py
training/: README.md  __init__.py  checkpoints.py  dry_run.py  eval_one.py  eval_sweep.py  sweep_8b_class.py  sweep_v02.py  sweep_v15.py
training/configs/: ember-v0.1-lora.yaml
training/infra/: accelerate_8xh100.yaml
(+99 files in other folders)
