[project]
name = "lhc"
version = "0.2.0"
description = "LHC — long-horizon coherence benchmark for 8B-class agent models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Hugo Nogueira", email = "hugomn@gmail.com" }]
keywords = ["llm", "agents", "long-horizon-coherence", "benchmark", "fine-tuning", "evals"]

dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "numpy>=1.26",
    "huggingface_hub>=0.26",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
# Local Apple Silicon training + serving via MLX-LM. The default for v0.1.
local = [
    "mlx>=0.18.0",
    "mlx-lm>=0.19.0",
]
# Future cloud-GPU path (kept here so we don't lose the plan, but unused for v0.1).
cloud = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "vllm>=0.6.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/hugomn/lhc"
Repository = "https://github.com/hugomn/lhc"
Issues = "https://github.com/hugomn/lhc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals", "data", "training", "inference"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
python_files = ["test_*.py", "*_test.py"]
